tests/fixtures/guardrails/valid/app/routes/products.ts
import { loadHealthCheck } from "~/app/services/health.server";

export async function loader() {
  return loadHealthCheck();
}
