tests/fixtures/guardrails/invalid/direct-admin-access/app/routes/products.ts
import { adminClient } from "~/platform/shopify/admin.server";

export async function action() {
  return adminClient;
}
